fix: Fix the documentation to not show the mermaid tooltip clipping at the top of each page with an inheritance diagram

--- a/docs/_static/css/theme_overrides.css
+++ b/docs/_static/css/theme_overrides.css
@@ -136,3 +136,8 @@ li:has(> a[href^="gen_"]),
 li:has(> a[href*="/gen_"]) {
     display: none;
 }
+
+/* Remove the mermaidTooltip */
+.mermaidTooltip {
+    display: none !important;
+}
